# duckdb-NER

./: .gitmodules  CMakeLists.txt  GEMINI.md  Makefile  PLAN.md  TEST.md  extension_config.cmake  vcpkg.json
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml
docs/: README.md
scripts/: convert_ner_to_ggml.py  download_default_model.sh  generate_model_header.py
src/: ner_extension.cpp  ner_model.cpp
src/include/: default_model.hpp  ner_extension.hpp  ner_model.hpp
test/sql/: ner.test
